--- a/public/css/naringu.css
+++ b/public/css/naringu.css
@@ -56,7 +56,8 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #6DD;
+  //color: #6DD;
+  color: #FFFFFF;
   text-decoration: none;
 }
 a strong {
@@ -72,7 +73,8 @@ a:focus {
 h1, h2, h3, h4, h5, h6 {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: #25BFBF;
+  //color: #25BFBF;
+  color: #FFFFFF;
   letter-spacing: -.025rem;
 } 
 
