--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
+	<!--
     <div align="center" class="footer">
-        <a href="{{ site.theme.link }}" target="_blank" title="naringu">{{ site.theme.codename }}</a>  is designed by {{ site.theme.creator }}<br />Copyright © {{ site.time | date: '%Y' }} <br>
+        Based on the <a href="{{ site.theme.link }}" target="_blank" title="naringu">{{ site.theme.codename }}</a> theme by {{ site.theme.creator }}<br /><br>
     </div>
+	-->
   </body>
 </html>
