--- a/public/css/form.css
+++ b/public/css/form.css
@@ -14,7 +14,8 @@
   color: #fff;
   background-color: #000;
   background-image: none;
-  border: 1px solid #6DD;
+  //border: 1px solid #6DD;
+  border: 1px solid #4D4D4D;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -312,10 +313,11 @@ select[multiple].input-lg {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000;
-  background-color: #6DD;
+  color: #FFF;
+  //background-color: #6DD;
+  background-color: #000000;
   background-image: none;
-  border: 1px solid #000;
+  border: 1px solid #4D4D4D;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
