--- a/public/css/naringu.css
+++ b/public/css/naringu.css
@@ -57,7 +57,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #fff;
+  *color: #25BFBF; 
   text-decoration: none;
 }
 a strong {
