--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,9 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="http://github.com/s0lst1ce">GitHub</a>
+    <a class="sidebar-nav-item" href="https://www.linkedin.com/in/johngabrielryan">LinkedIn</a>
+    <a class="sidebar-nav-item" href="http://https://twitter.com/s0lst1c3">Twitter</a>
+  </nav>
   </nav>
 
   <div class="sidebar-item">
