--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
     <a class="sidebar-nav-item" href="http://github.com/s0lst1ce">GitHub</a>
     <a class="sidebar-nav-item" href="https://www.linkedin.com/in/johngabrielryan">LinkedIn</a>
-    <a class="sidebar-nav-item" href="http://https://twitter.com/s0lst1c3">Twitter</a>
+    <a class="sidebar-nav-item" href="https://twitter.com/s0lst1c3">Twitter</a>
   </nav>
   </nav>
 
