--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-      <img width="125" height="125" alt="A photo of ariestiyansyah" src="{{ site.baseurl }}images/profile.jpg">
+      <img width="125" height="125" alt="sidebar photo" src="{{ site.baseurl }}images/profile.jpg">
     <p>{{ site.description }}</p>
   </div>
 
