--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,8 +26,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="http://github.com/s0lst1ce">GitHub</a>
-    <a class="sidebar-nav-item" href="https://www.linkedin.com/in/johngabrielryan">LinkedIn</a>
+    <a class="sidebar-nav-item" href="http://github.com/s0lst1c3">GitHub</a>
+    <a class="sidebar-nav-item" href="https://www.linkedin.com/in/ms08067">LinkedIn</a>
     <a class="sidebar-nav-item" href="https://twitter.com/s0lst1c3">Twitter</a>
   </nav>
   </nav>
