--- a/public/css/naringu.css
+++ b/public/css/naringu.css
@@ -57,8 +57,8 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  *color: #DEE3DE;
-  /* *color: #000; */
+  /**color: #DEE3DE;*/
+  *color: #000;
   /**color: #25BFBF;  */
   text-decoration: none;
 }
