--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,11 +11,12 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
-
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
+
+    <a class="sidebar-nav-item{% if page.url == '/me/' %} active{% endif %}" href="{{ site.baseurl }}me/">About</a>
 
     {% assign pages_list = site.pages | sort:"url" %}
     {% for node in pages_list %}
