--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -1,12 +1,12 @@
 .highlight .hll { background-color: #000; }
-.highlight .c { color: #999; } /* Comment */
+.highlight .c { color: #ddd; } /* Comment */
 .highlight .err { color: #a00; background-color: #000 } /* Error */
-.highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
+.highlight .k { color: #0af; } /* Keyword */
+.highlight .o { color: #c1c1c1 } /* Operator */
 .highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
+.highlight .c1 { color: #ddd; } /* Comment.Single */
+.highlight .cs { color: #ddd; } /* Comment.Special */
 .highlight .gd { background-color: #fcc; border: 1px solid #6DD } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #f00 } /* Generic.Error */
@@ -17,49 +17,49 @@
 .highlight .gs { } /* Generic.Strong */
 .highlight .gu { color: #030; } /* Generic.Subheading */
 .highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
+.highlight .kc { color: #0af; } /* Keyword.Constant */
+.highlight .kd { color: #0af; } /* Keyword.Declaration */
+.highlight .kn { color: #0af; } /* Keyword.Namespace */
+.highlight .kp { color: #0af } /* Keyword.Pseudo */
+.highlight .kr { color: #0af; } /* Keyword.Reserved */
 .highlight .kt { color: #078; } /* Keyword.Type */
 .highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
+.highlight .s { color: #ffb0b4 } /* Literal.String */
 .highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
+.highlight .nb { color: #81ffff } /* Name.Builtin */
 .highlight .nc { color: #0a8; } /* Name.Class */
 .highlight .no { color: #360 } /* Name.Constant */
 .highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
+.highlight .ni { color: #ddd; } /* Name.Entity */
 .highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
+.highlight .nf { color: #f2bcff } /* Name.Function */
 .highlight .nl { color: #99f } /* Name.Label */
 .highlight .nn { color: #0cf; } /* Name.Namespace */
 .highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
-.highlight .ow { color: #069; } /* Operator.Word */
+.highlight .nv { color: #0ff } /* Name.Variable */
+.highlight .ow { color: #0af; } /* Operator.Word */
 .highlight .w { color: #bbb } /* Text.Whitespace */
 .highlight .mf { color: #f60 } /* Literal.Number.Float */
 .highlight .mh { color: #f60 } /* Literal.Number.Hex */
 .highlight .mi { color: #f60 } /* Literal.Number.Integer */
 .highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
-.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
-.highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
+.highlight .sb { color: #ffd8cb } /* Literal.String.Backtick */
+.highlight .sc { color: #ffd8cb } /* Literal.String.Char */
+.highlight .sd { color: #ffd8cb; font-style: italic } /* Literal.String.Doc */
+.highlight .s2 { color: #ffd8cb } /* Literal.String.Double */
+.highlight .se { color: #ffd8cb; } /* Literal.String.Escape */
+.highlight .sh { color: #ffd8cb } /* Literal.String.Heredoc */
 .highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
+.highlight .sx { color: #ffd8cb } /* Literal.String.Other */
 .highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
+.highlight .s1 { color: #ffd8cb } /* Literal.String.Single */
 .highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
+.highlight .bp { color: #81ffff } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #0ff } /* Name.Variable.Class */
+.highlight .vg { color: #0ff } /* Name.Variable.Global */
+.highlight .vi { color: #0ff } /* Name.Variable.Instance */
 .highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
 
 .css .o,
 .css .o + .nt,
-.css .nt + .nt { color: #999; }
+.css .nt + .nt { color: #ddd; }
