--- a/public/css/naringu.css
+++ b/public/css/naringu.css
@@ -155,10 +155,16 @@ pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  padding: .25em .5em;
-  font-size: 85%;
+/*
   color: #000;
-  background-color: #0CDADA;;
+  background-color: #4D4D4D;
+*/
+
+  padding: .15em .5em;
+  font-size: 85%;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+  background-color: #000;
   border-radius: 3px;
 }
 pre {
